<resources>

    <string name="ERROR_UNEXPECTED">Um erro inesperado ocorreu. Tente novamente mais tarde.</string>
    <string name="app_name">KTiVO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Controle de Temperatura</string>
    <string name="nav_header_subtitle">suporte@ktivo.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="celular">Celular</string>
    <string name="email">email</string>
    <string name="nome">Nome</string>
    <string name="num_instalation">Número de Instalação</string>
    <string name="area_local_error">Não foi possível salvar Área Localmente!</string>
    <string name="place_local_error">Não foi possível salvar Local Localmente!</string>
    <string name="contact_local_error">Não foi possível salvar Contato Localmente!</string>
    <string name="provider_local_error">Não foi possível salvar Fornecedor Localmente!</string>
    <string name="sensor_local_error">Não foi possível salvar Sensor Localmente!</string>
    <string name="contact_remote_error">Não foi possível salvar Contato Remoto!</string>
    <string name="configuration_error">Não foi possível salvar Configuração</string>
    <string name="shared_error">Não foi possível salvar Preferências</string>
    <string name="num_instalation_Invalid">Número de Instalação Inválido!!!</string>
    <string name="not_null">Campo deve ser preeenchido!</string>
    <string name="ok">OK</string>
    <string name="null_msg"></string>
    <string name="prosseguir">Prosseguir</string>
    <string name="temperatura">Temperaturas</string>
    <string name="operacoes">Operações</string>
    <string name="configuracoes">Configurações</string>
    <string name="cadastros">Cadastros</string>
    <string name="allTemp">Todos</string>
    <string name="normalTemp">Normal</string>
    <string name="hotTemp">Quente</string>
    <string name="coldTemp">Frio</string>
    <string name="msg_token_fmt">Firebase Blauth</string>
    <string name="ERROR_INTERNET_CONNECTION">Conexão à internet é necessária para esta função.</string>
    <string name="NO_ROWS_TO_SHOW">Não existem registros para mostrar</string>
    <string name="NO_ONLINE_ROWS">Atenção! Sem Internet. Dados dezatualizados.</string>
    <string name="title_activity_pick_photo">pickPhoto</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_teste">teste</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_area">AreaActivity</string>
    <string name="notifica">Notificação</string>

</resources>