<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_last_temp"
            android:icon="@drawable/ic_mark"
            android:title="@string/temperatura" />
        <item
            android:id="@+id/nav_Operation"
            android:icon="@drawable/ic_mark"
            android:title="@string/operacoes" />
        <item
            android:id="@+id/nav_Configuration"
            android:icon="@drawable/ic_mark"
            android:title="@string/configuracoes" />
        <item
            android:id="@+id/nav_Register"
            android:icon="@drawable/ic_mark"
            android:title="@string/cadastros" />

    </group>
</menu>